Divide Pair Conquer

--- a/about_generating_permutations_and_combinations.ipynb
+++ b/about_generating_permutations_and_combinations.ipynb
@@ -48,6 +48,36 @@
    "source": [
     "Knuth found over 4500 words. How many can **you** find?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Words:  69,936,116,250  letters combinations that can be words.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def combs(n):\n",
+    "    sum = 0\n",
+    "    for i in range(2,8):\n",
+    "        sum += n * (25 ** i)\n",
+    "    print(\"Words: \", \"{:,}\".format(sum), \" letters combinations that can be words.\")\n",
+    "\n",
+    "combs(11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -66,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
