--- a/about_pascals_triangle.ipynb
+++ b/about_pascals_triangle.ipynb
@@ -71,7 +71,10 @@
     "  - [ ] At least one.\n",
     "  - [ ] At most one.\n",
     "  - [ ] Exactly one.\n",
-    "  - [ ] It cannot be determined."
+    "  - [ ] It cannot be determined.\n",
+    "\n",
+    "\n",
+    "[The answer is \"zero\".]  "
    ]
   },
   {
@@ -86,7 +89,10 @@
     "  - [ ] At least one.\n",
     "  - [ ] At most one.\n",
     "  - [ ] Exactly one.\n",
-    "  - [ ] It cannot be determined."
+    "  - [ ] It cannot be determined.\n",
+    "\n",
+    "\n",
+    " [The answer is \"zero\".]"
    ]
   }
  ],
@@ -106,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
