--- a/week6/06_2_About_Deeper_Probability_Theory.ipynb
+++ b/week6/06_2_About_Deeper_Probability_Theory.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "06_2_About_Deeper_Probability_Theory.ipynb",
+      "name": "Copy of 06_2_About_Deeper_Probability_Theory.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOo1NbPzJ5XTdVOW3gmz7Db",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/06_2_About_Deeper_Probability_Theory.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -267,6 +256,97 @@
         "     1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1   1\n",
         "    1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6q4jDQX1JePw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eGq3gN3aJgpq"
+      },
+      "source": [
+        "P(even) = 1 - P(odd)\r\n",
+        "\r\n",
+        "Up to every 2^n rows, the total number of odds is 3^n\r\n",
+        "\r\n",
+        "P(odd) $\\approx$ 3^log2(n) / (n (n+1) / 2) for some row n\r\n",
+        "\r\n",
+        "$$\r\n",
+        "  \\frac{2 * 3^{log_{2}(n)}}{n^2+n}\\\\\r\n",
+        "$$\r\n",
+        "Which taken to its limit:\r\n",
+        "$$\r\n",
+        "  lim_{n -> inf}(\\frac{2 * 3^{log_{2}(n)}}{n^2+n}) \\\\\r\n",
+        "  = lim_{n -> inf}(\\frac{d/dn*(2 * 3^{log_{2}(n)})}{2n+1})\\\\\r\n",
+        "  = lim_{n -> inf}(\\frac{2d/dn*3^{log_{2}(n)}}{2n+1})\\\\\r\n",
+        "  = lim_{n -> inf}(\\frac{2*ln(3)*3^{log_{2}(n)}*d/dn(log_{2}(n))}{2n+1})\\\\\r\n",
+        "  = lim_{n -> inf}(\\frac{2*ln(3)*3^{log_2(n)*\\frac{1}{n*ln(2)}}}{2n+1})\\\\\r\n",
+        "  = 2*ln(3)*lim_{n -> inf}(\\frac{3^{log_2(n)}}{(2n+1)*(n*ln(2))})\r\n",
+        "$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pLWbU5WVYDwJ",
+        "outputId": "6b3090d2-fed1-4fb1-a983-5d9c3ea729ed"
+      },
+      "source": [
+        "import math\r\n",
+        "\r\n",
+        "def pascal_triangle_even_probability(n):\r\n",
+        "  p_odd = (2 * 3 **(math.log(n,2))) / (n**2 + n)\r\n",
+        "  p_even = 1 - p_odd\r\n",
+        "  print(p_even)\r\n",
+        "\r\n",
+        "pascal_triangle_even_probability(1024)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.8874828506097561\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2QLknPosZIzR"
+      },
+      "source": [
+        "Probabiliry of even numbers in a triangual:\r\n",
+        "$$\r\n",
+        "P(even) = 1 - P(odd)\r\n",
+        "$$\r\n",
+        "Probability of odd numbers:\r\n",
+        "$$\r\n",
+        "  P(odd) \\approx \\frac{2 * 3^{log_{2}(n)}}{n^2+n}\\\\\r\n",
+        "$$\r\n",
+        "If if we will take it to its limits, then:\r\n",
+        "\r\n",
+        "$$\r\n",
+        "  lim_{n -> \\infty}(\\frac{2 * 3^{log_{2}(n)}}{n^2+n}) \\\\\r\n",
+        "  = lim_{n -> \\infty}(\\frac{2 * e^{ln(3)/ln(2)} * n}{n^2+n}) \\\\\r\n",
+        "$$\r\n",
+        "\r\n",
+        "Since $2 * e^{ln(3)/ln(2)}$ is a constant, P(odd) will grow closer and closer to zero. That means, $P(even) -> 1 - 0 = 1$. So the probability to get an even number will be 100%.\r\n"
       ]
     }
   ]
