--- a/week6/Three_Paper_Sheet_problem.ipynb
+++ b/week6/Three_Paper_Sheet_problem.ipynb
@@ -28,29 +28,38 @@
         "id": "muYWb7HwNkwa"
       },
       "source": [
-        "Thre paper sheets\r\n",
-        "1 (W1, W2) || 2 (W3, B0) || 3 (B1, B2)\r\n",
-        "\r\n",
-        "Let E = chose BB\r\n",
-        "Let F = chose BW\r\n",
-        "Let G = chose WW\r\n",
-        "Let S = see B\r\n",
-        "Want to know P(E|S)\r\n",
-        "P(E) = P(F) = P(G) = 1/3\r\n",
-        "P(S|E) = 1\r\n",
-        "P(S|F) = 1/2\r\n",
-        "P(S|G) = 0\r\n",
-        "So by BTG: \r\n",
-        "$$\r\n",
-        "P(E|S) = \\frac{P(S|E)P(E)}{P(S|E)P(E) + P(S|F)P(F) + P(S|G)P(G)}\r\n",
-        "$$\r\n",
-        "\r\n",
-        "$$\r\n",
-        "P(E|S) = \\frac{1(1/3)}{1(1/3) + (1/2)(1/3) + 0(1/3)}\r\n",
-        "$$\r\n",
-        "\r\n",
-        "$$\r\n",
-        " = \\frac{1}{1 + 1/2} = \\frac{1}{3/2} = \\frac{2}{3}\r\n",
+        "Thre paper sheets\n",
+        "1 (W1, W2) || 2 (W3, B0) || 3 (B1, B2)\n",
+        "\n",
+        "Let E = chose BB\n",
+        "\n",
+        "Let F = chose BW\n",
+        "\n",
+        "Let G = chose WW\n",
+        "\n",
+        "Let S = see B\n",
+        "\n",
+        "Want to know P(E|S)\n",
+        "\n",
+        "P(E) = P(F) = P(G) = 1/3\n",
+        "\n",
+        "P(S|E) = 1\n",
+        "\n",
+        "P(S|F) = 1/2\n",
+        "\n",
+        "P(S|G) = 0\n",
+        "\n",
+        "So by BTG: \n",
+        "$$\n",
+        "P(E|S) = \\frac{P(S|E)P(E)}{P(S|E)P(E) + P(S|F)P(F) + P(S|G)P(G)}\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "P(E|S) = \\frac{1(1/3)}{1(1/3) + (1/2)(1/3) + 0(1/3)}\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        " = \\frac{1}{1 + 1/2} = \\frac{1}{3/2} = \\frac{2}{3}\n",
         "$$"
       ]
     }
