Added Grading Comments

--- a/week6/06_2_About_Deeper_Probability_Theory.ipynb
+++ b/week6/06_2_About_Deeper_Probability_Theory.ipynb
@@ -314,7 +314,7 @@
         "\r\n",
         "pascal_triangle_even_probability(1024)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,6 +347,15 @@
         "$$\r\n",
         "\r\n",
         "Since $2 * e^{ln(3)/ln(2)}$ is a constant, P(odd) will grow closer and closer to zero. That means, $P(even) -> 1 - 0 = 1$. So the probability to get an even number will be 100%.\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dVJYc8o-V916"
+      },
+      "source": [
+        "$\\color{red}{\\text{Correct! Nice work!}}$"
       ]
     }
   ]
