--- a/week 12/12_1_About_Languages_and_Words_and_Numbers_and_Names.ipynb
+++ b/week 12/12_1_About_Languages_and_Words_and_Numbers_and_Names.ipynb
@@ -7,9 +7,7 @@
       "provenance": [],
       "collapsed_sections": [
         "ugpYR2xxzm9a"
-      ],
-      "authorship_tag": "ABX9TyNfNMCEPQQTLR1rw0WYZH6R",
-      "include_colab_link": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -20,16 +18,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/12_1_About_Languages_and_Words_and_Numbers_and_Names.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -142,7 +130,7 @@
       "source": [
         "!echo -n 'main(){char *c=\"main(){char *c=%c%s%c;printf(c,34,c,34);}\";printf(c,34,c,34);}' > quine.c; cc -w quine.c; ./a.out | diff - quine.c"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +213,7 @@
       "source": [
         "!javac Dupe.java"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +224,7 @@
       "source": [
         "!rm -rf dupedupe && mkdir dupedupe"
       ],
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +239,7 @@
       "source": [
         "!cd dupedupe; java -cp .. Dupe"
       ],
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +258,7 @@
       "source": [
         "!diff Dupe.java dupedupe/Dupe.java"
       ],
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +312,9 @@
         "id": "6kZrrpj00Pv0"
       },
       "source": [
-        "Grapple with this (and related) paradoxes with your partner. Discuss various types of paradoxes you have encountered in your travels."
+        "Grapple with this (and related) paradoxes with your partner. Discuss various types of paradoxes you have encountered in your travels.\n",
+        "\n",
+        "Our little research has shown that number can create dozens of paradoxes, especially if we will use them in combination with any language. When we try to explain somethings in a language created by humans using numbers we face some problems because math is the language of logic, while human languages are irrational."
       ]
     },
     {
@@ -344,7 +334,9 @@
       "source": [
         "Look up and read the Edgar Allan Poe \"prose poem\" *The Power of Words*, and discuss it with your partner. You might even take turns reading out loud, one of you taking the role of Oinos and the other of Agathos.\n",
         "\n",
-        "Be prepared to have to look up some words!"
+        "Be prepared to have to look up some words!\n",
+        "\n",
+        "The novel shows how universe was create thru God's words. It reminds us about the significanse of language in our history. The first civilization have appeared when people were able to write their language, because language can store and share information with others.\n"
       ]
     }
   ]
